--- a/example/Dockerfile
+++ b/example/Dockerfile
@@ -5,12 +5,16 @@
 # You may obtain a copy of the License at
 #
 #   http://www.apache.org/licenses/LICENSE-2.0
-FROM qgis-model-ubuntu
+FROM qgis-model-ubuntu:trusty
 MAINTAINER Daniel Nüst <daniel.nuest@uni-muenster.de>
 
 # This Dockerfile is only an extension of the main Dockerfile to 
 # show how data can be copied into the container, instead of
 # mounting it at execution time.
-COPY data /data
+COPY . /workspace
 
 # CMD/ENTRYPOINT can stay the same
+
+# Execute the following commands _in the directory of this file_ to build and execute a self-contained image:
+# BUILD COMMAND: docker build -t qgis-model-example .
+# RUN COMMAND: docker run --rm -it qgis-model-example
