--- a/ubuntu/Dockerfile.trusty
+++ b/ubuntu/Dockerfile.trusty
@@ -63,12 +63,14 @@ WORKDIR /tmp
 ENV SAGA_VERSION_MINOR 2.2.0
 ENV SAGA_VERSION 2.2
 RUN wget http://downloads.sourceforge.net/project/saga-gis/SAGA%20-%20$SAGA_VERSION/SAGA%20$SAGA_VERSION_MINOR/saga_$SAGA_VERSION_MINOR.tar.gz \
-    && tar -xvzf saga*.tar.gz
-
-WORKDIR /tmp/saga-$SAGA_VERSION_MINOR
-RUN ./configure \
-    && make \
-    && make install
+    && tar -xzf saga*.tar.gz \
+    && rm saga*.tar.gz \
+    && cd saga-$SAGA_VERSION_MINOR \
+    && ./configure \
+    && cd .. \
+    && make -C saga-$SAGA_VERSION_MINOR \
+    && make -C saga-$SAGA_VERSION_MINOR install \
+    && rm -r saga-$SAGA_VERSION_MINOR
 
 # Set environment variables
 ENV PYTHONPATH=/usr/share/qgis/python:/usr/lib/otb/python:/usr/share/qgis/python/plugins
