fix Xenial-based Dockerfile

--- a/ubuntu/Dockerfile.xenial
+++ b/ubuntu/Dockerfile.xenial
@@ -8,33 +8,19 @@
 FROM ubuntu:16.04
 MAINTAINER Daniel Nüst <daniel.nuest@uni-muenster.de>
 
-# For ubuntu 14.04, potentially useful for 16.04 as well:
-# Add qgis repos to get latest QGIS, see https://www.qgis.org/en/site/forusers/alldownloads.html#debian-ubuntu/qgis.org
-# use the one with ubuntugis dependencies > http://qgis.org/ubuntugis/
-#deb     http://qgis.org/debian trusty main
-#deb-src http://qgis.org/debian trusty main
-#apt-key adv --keyserver keyserver.ubuntu.com --recv-key 3FF5FFCAD71472C4
+# Install QGIS and GIS libs from https://launchpad.net/ubuntu/+source/qgis
+ENV QGIS_VERSION 2.8.6+dfsg-1build1
 
 RUN apt-get update \
-    && apt-get install -qqy software-properties-common --no-install-recommends \
-    && apt-add-repository -y ppa:ubuntugis/ubuntugis-unstable \ 
-    && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 314DF160 \
-    && apt-get -qqy update \
     && apt-get install -qqy --no-install-recommends \
         gdal-bin \
-        otb-bin \
-        otb-bin-qt \
-        python-otb \
-        python-qgis-common \
-        python-qgis \
-        #saga \
-        grass \
-        python-qgis \
+        python-gdal \
         python-scipy \
         python-numpy \
-        qgis-plugin-grass \
-        qgis-providers \
-        qgis \
+        qgis=$QGIS_VERSION \
+        qgis-providers=$QGIS_VERSION \
+        python-qgis-common=$QGIS_VERSION \
+        python-qgis=$QGIS_VERSION \
         xvfb \
         tree \
     && apt-get clean \
@@ -43,16 +29,17 @@ RUN apt-get update \
 # Install SAGA in specific version to avoid compatibility issues: http://hub.qgis.org/issues/13279
 # A manualy try using software-properties-common and devscripts (rmadison) from different source packages/repos shows many different versions, but explicitly installing 2.2.0+dfsg-1build2 or 2.1.4+dfsg-1ubuntu1 does NOT work
 # Instructions based on https://sourceforge.net/p/saga-gis/wiki/Compiling%20a%20Linux%20Unicode%20version/
+ENV SAGA_VERSION 2.2
+ENV SAGA_VERSION_MINOR $SAGA_VERSION.0
+WORKDIR /saga
 RUN apt-get update \
     && apt-get install -qqy --no-install-recommends \
-        wget \
         g++ \
         make \
         automake \
         libtool \
         libwxgtk3.0-dev \
         libtiff5-dev \
-        #libtiff4-dev also available for 14.04
         libgdal-dev \
         libproj-dev \
         libjasper-dev \
@@ -60,26 +47,37 @@ RUN apt-get update \
         wx-common \
         libogdi3.2-dev \
         unixodbc-dev \
+        wget \
     && apt-get clean
-
-ENV SAGA_VERSION_MINOR 2.2.0
-ENV SAGA_VERSION 2.2
-
 RUN wget http://downloads.sourceforge.net/project/saga-gis/SAGA%20-%20$SAGA_VERSION/SAGA%20$SAGA_VERSION_MINOR/saga_$SAGA_VERSION_MINOR.tar.gz \
     && tar -xvzf saga*.tar.gz
-
-WORKDIR saga-$SAGA_VERSION_MINOR
+WORKDIR /saga/saga-$SAGA_VERSION_MINOR
 RUN ./configure \
     && make \
     && make install
 
-ENV PYTHONPATH=/usr/share/qgis/python:/usr/lib/otb/python:/usr/share/qgis/python/plugins
+# Install OTB, see https://www.orfeo-toolbox.org/CookBook/Installation.html
+ENV OTB_VERSION OTB-5.6.1-Linux64
+WORKDIR /otb
+RUN wget https://www.orfeo-toolbox.org/packages/$OTB_VERSION.run -q \
+    && chmod +x $OTB_VERSION.run \
+    && ./$OTB_VERSION.run \
+    && rm $OTB_VERSION.run
+# Set non-typical OTB installation dirs for usage in model.py, no profile needed then (see https://github.com/qgis/QGIS/pull/2840/files)
+ENV OTB_FOLDER /otb/$OTB_VERSION/bin
+ENV OTB_LIB_FOLDER /otb/$OTB_VERSION/lib/otb/applications
+
+# Set environment variables for workflow execution
+ENV PYTHONPATH=/usr/share/qgis/python:/usr/share/qgis/python/plugins
 ENV QGIS_LOGFILE=/qgis/qgis.log
+ENV QGIS_PROCESSING_LOGFILE=/root/.qgis2/processing/processing.log
+ENV QGIS_WORKSPACE=/workspace
 ENV QGIS_MODELFILE=/workspace/models/*.model
+ENV QGIS_MODELSCRIPT=/workspace/model.py
 ENV QGIS_SCRIPTFILE=/workspace/scripts/*.py
+ENV QGIS_RESULT=/workspace/results
 ENV QGIS_USER_MODELDIR=/root/.qgis2/processing/models
 ENV QGIS_USER_SCRIPTDIR=/root/.qgis2/processing/scripts
-ENV QGIS_MODELSCRIPT=/workspace/model.py
 ENV XVFB_LOGFILE=/qgis/xvfb.log
 
 # Add main script
@@ -87,4 +85,6 @@ WORKDIR /qgis
 COPY model.sh model.sh
 RUN chmod 0755 model.sh
 
-ENTRYPOINT ["/qgis/model.sh"]
+ENTRYPOINT ["/bin/bash", "/qgis/model.sh"]
+
+# docker build --tag xenial-default-qgis --file Dockerfile.xenial-fixed .
