--- a/ubuntu/Dockerfile.xenial-ubuntugis-unstable
+++ b/ubuntu/Dockerfile.xenial-ubuntugis-unstable
@@ -5,14 +5,15 @@
 # You may obtain a copy of the License at
 #
 #   http://www.apache.org/licenses/LICENSE-2.0
-FROM ubuntu:14.04
+FROM ubuntu:16.04
 MAINTAINER Daniel Nüst <daniel.nuest@uni-muenster.de>
 
 # For ubuntu 14.04, potentially useful for 16.04 as well:
 # Add qgis repos to get latest QGIS, see https://www.qgis.org/en/site/forusers/alldownloads.html#debian-ubuntu/qgis.org
 # use the one with ubuntugis dependencies > http://qgis.org/ubuntugis/
-
-ENV QGIS_VERSION=1:2.8.1-0+20trusty6
+#deb     http://qgis.org/debian trusty main
+#deb-src http://qgis.org/debian trusty main
+#apt-key adv --keyserver keyserver.ubuntu.com --recv-key 3FF5FFCAD71472C4
 
 RUN apt-get update \
     && apt-get install -qqy software-properties-common --no-install-recommends \
@@ -20,28 +21,30 @@ RUN apt-get update \
     && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 314DF160 \
     && apt-get -qqy update \
     && apt-get install -qqy --no-install-recommends \
-        tree \
-        xvfb \
-        # QGIS requirements:
         gdal-bin \
         otb-bin \
         otb-bin-qt \
         python-otb \
         python-qgis-common \
+        python-qgis \
         #saga \
         grass \
-        # Python installer; numerical and imaging libs:
-        python-pip \
-        python-dev \
+        python-qgis \
         python-scipy \
         python-numpy \
-        libjpeg8-dev \
-        # QGIS:
         qgis-plugin-grass \
-        qgis-providers=$QGIS_VERSION \
-        qgis=$QGIS_VERSION \
-        python-qgis=$QGIS_VERSION \
-        # Needed to compile SAGA:
+        qgis-providers \
+        qgis \
+        xvfb \
+        tree \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install SAGA in specific version to avoid compatibility issues: http://hub.qgis.org/issues/13279
+# A manualy try using software-properties-common and devscripts (rmadison) from different source packages/repos shows many different versions, but explicitly installing 2.2.0+dfsg-1build2 or 2.1.4+dfsg-1ubuntu1 does NOT work
+# Instructions based on https://sourceforge.net/p/saga-gis/wiki/Compiling%20a%20Linux%20Unicode%20version/
+RUN apt-get update \
+    && apt-get install -qqy --no-install-recommends \
         wget \
         g++ \
         make \
@@ -49,7 +52,7 @@ RUN apt-get update \
         libtool \
         libwxgtk3.0-dev \
         libtiff5-dev \
-        libtiff4-dev \
+        #libtiff4-dev also available for 14.04
         libgdal-dev \
         libproj-dev \
         libjasper-dev \
@@ -57,14 +60,11 @@ RUN apt-get update \
         wx-common \
         libogdi3.2-dev \
         unixodbc-dev \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+    && apt-get clean
 
-# Install SAGA in specific version to avoid compatibility issues: http://hub.qgis.org/issues/13279
-# A manualy try using software-properties-common and devscripts (rmadison) from different source packages/repos shows many different versions, but explicitly installing 2.2.0+dfsg-1build2 or 2.1.4+dfsg-1ubuntu1 does NOT work
-# Instructions based on https://sourceforge.net/p/saga-gis/wiki/Compiling%20a%20Linux%20Unicode%20version/
 ENV SAGA_VERSION_MINOR 2.2.0
 ENV SAGA_VERSION 2.2
+
 RUN wget http://downloads.sourceforge.net/project/saga-gis/SAGA%20-%20$SAGA_VERSION/SAGA%20$SAGA_VERSION_MINOR/saga_$SAGA_VERSION_MINOR.tar.gz \
     && tar -xvzf saga*.tar.gz
 
@@ -72,8 +72,6 @@ WORKDIR saga-$SAGA_VERSION_MINOR
 RUN ./configure \
     && make \
     && make install
-    
-#RUN pip install Pillow GDAL
 
 ENV PYTHONPATH=/usr/share/qgis/python:/usr/lib/otb/python:/usr/share/qgis/python/plugins
 ENV QGIS_LOGFILE=/qgis/qgis.log
