--- a/workspace/jonjona/Dockerfile
+++ b/workspace/jonjona/Dockerfile
@@ -5,7 +5,8 @@
 # You may obtain a copy of the License at
 #
 #   http://www.apache.org/licenses/LICENSE-2.0
-FROM nuest/docker-qgis-model:trusty
+#FROM nuest/docker-qgis-model:trusty
+FROM docker-qgis-stable-model
 MAINTAINER Daniel Nüst <daniel.nuest@uni-muenster.de>
 
 COPY . /workspace
