--- a/ubuntu/Dockerfile.xenial
+++ b/ubuntu/Dockerfile.xenial
@@ -85,6 +85,9 @@ WORKDIR /qgis
 COPY model.sh model.sh
 RUN chmod 0755 model.sh
 
+# Expose a default volume for Kitematic UI
+VOLUME $QGIS_WORKSPACE
+
 ENTRYPOINT ["/bin/bash", "/qgis/model.sh"]
 
 # docker build --tag xenial-default-qgis --file Dockerfile.xenial-fixed .
