add rs-jonjona workspace

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 workspace/example/results/2*
 workspace/jonjona/results/*
-!workspace/jonjona/results/README.md
+workspace/rs-jonjona/results/*
+!**/results/README.md
