--- a/ubuntu/Dockerfile.xenial-multimodel
+++ b/ubuntu/Dockerfile.xenial-multimodel
@@ -13,4 +13,4 @@ WORKDIR /qgis
 COPY multi-model.sh model.sh
 RUN chmod 0755 model.sh
 
-# docker build --tag xenial-multi-model --file Dockerfile.xenial-multimodel .
+# docker build --tag xenial-multimodel --file Dockerfile.xenial-multimodel .
